--- a/master-slave/build.gradle
+++ b/master-slave/build.gradle
@@ -6,6 +6,12 @@ apply plugin: 'eclipse'
 
 description = "Scala/Akka exercise: The Master-Slave Pattern (Divide & Conquer)"
 
+test {
+    testLogging {
+        events "passed", "skipped", "failed"
+    }
+}
+
 repositories {
     mavenLocal()
     mavenCentral()
@@ -24,6 +30,7 @@ dependencies {
 
     compile group: "com.typesafe.akka", name: "akka-actor_2.10", version: "2.3.0"
 
+    testCompile group: "junit", name: "junit", version: "4.11"
     testCompile group: "org.mockito", name: "mockito-all", version: "1.9.5"
     testCompile group: "org.scalatest", name: "scalatest_2.10", version: "2.2.2"
     testCompile group: "com.typesafe.akka", name: "akka-testkit_2.10", version: "2.3.14"
