--- a/master-slave/build.gradle
+++ b/master-slave/build.gradle
@@ -3,8 +3,10 @@ plugins { id "com.github.maiflai.scalatest" version "0.9" }
 apply plugin: 'scala'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
+apply plugin: 'application'
 
 description = "Scala/Akka exercise: The Master-Slave Pattern (Divide & Conquer)"
+mainClassName = "katas.akka.masterslave.Main"
 
 test {
     testLogging {
